--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Track toy problem stats",
   "scripts": {
-    "start": "webpack -w",
-    "server": "nodemon server/index.js",
+    "start": "npm run dev-server",
+    "dev": "npm run dev-server & npm run dev-client --progress --colors",
+    "dev-client": "webpack -w",
+    "dev-server": "nodemon server/index.js",
     "test": "nodemon server/index.js"
   },
   "repository": {
@@ -24,11 +26,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bluebird": "^3.7.2",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.4",
     "mysql2": "^2.3.3",
+    "pg": "^8.7.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
